<resources>
    <string name="app_name">LaboRes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Faculte des sciences</string>
    <string name="nav_header_subtitle">Universite de Douala</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_historique">Historique</string>
    <string name="menu_a_propos">A propos</string>

    <array name="types_reservations">
        <item> </item>
        <item>Cours</item>
        <item>Soutenance</item>
        <item>Conférence</item>
    </array>

    <array name="grade">
        <item> </item>
        <item>Professeur</item>
        <item>Docteur</item>
        <item>Doctorant</item>
    </array>
    <string name="image_wifi">image wifi</string>
    <string name="verifier_votre_connexion_internet">Vérifier votre connexion internet</string>
    <string name="ok">OK</string>
    <string name="image_de_mise_a_jour">image de mise à jour</string>
    <string name="veuillez_mettre_a_jour_l_application">Veuillez mettre a jour l\'application</string>
    <string name="nom_d_utilisateur">nom d\'utilisateur</string>
    <string name="mot_de_passe">mot de passe</string>
    <string name="envoyer">envoyer</string>
    <string name="image_du_logo">image du logo</string>
    <string name="votre_grade">Votre grade</string>
    <string name="votre_nom">Votre nom</string>
    <string name="votre_numero_de_t_l_phone">Votre numero de téléphone</string>
    <string name="motif_de_reservation">Motif de réservation</string>
    <string name="date_de_reservation">Date de réservation</string>
    <string name="heure_de_debut">Heure de début</string>
    <string name="heure_de_fin">Heure de fin</string>
    <string name="ajouter">ajouter</string>
    <string name="annuler">annuler</string>
    <string name="application_pour_la_reservation_du_laboratoire_de_mathematique_informatique">Application pour la réservation du laboratoire de mathématique et informatique</string>
    <string name="version_1_0">version 1.0</string>
    <string name="liste_des_anciennes_reservations">Liste des anciennes réservations</string>
    <string name="aucune_reservation">Aucune réservation</string>
    <string name="liste_des_reservations">Liste des réservations</string>
    <string name="boutton_floatant">bouton flottant</string>
    <string name="reservation_annuler">réservation annuler</string>
    <string name="grade_et_nom">Grade et Nom:</string>
    <string name="numero">Numéro:</string>
    <string name="type_de_reservation">Type de réservation:</string>
    <string name="date_de_r_servation">Date de réservation:</string>
    <string name="heure_debut">Heure debut:</string>
    <string name="heure_fin">Heure fin:</string>
    <string name="check">check</string>
    <string name="supprimer">supprimer</string>
    <string name="la_fili_re_concern">la filière concerné</string>
    <string name="mon_compte">Mon Compte</string>
    <string name="modifier_mon_mot_de_passe">Modifier mon mot de passe</string>
    <string name="modifier_mon_identifiant">Modifier mon identifiant</string>
    <string name="plage_de_la_semaine">plage de la semaine</string>
    <string name="d_connexion">Déconnexion</string>
    <string name="ajouter_un_compte">Ajouter un compte</string>
    <string name="mettre_jour">mettre à jour</string>
    <string name="entrez_le_grade">entrez le grade</string>
    <string name="nom_du_professeur">Nom du professeur</string>
    <string name="num_ro_de_t_l_phone_du_professeur">Numéro de téléphone du professeur</string>
    <string name="confirmez_votre_mot_de_passe">Confirmez votre mot de passe</string>
    <string name="nouveau_mot_de_passe">Nouveau mot de passe</string>
    <string name="ancien_mot_de_passe">Ancien mot de passe</string>
    <string name="date_de_debut_de_semaine">Date de début de semaine</string>
    <string name="date_de_fin_de_semaine">Date de fin de semaine</string>
</resources>