<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_historique"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_historique" />

        <item
            android:id="@+id/nav_mon_compte"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/mon_compte" />

        <item
            android:id="@+id/nav_a_propos"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_a_propos" />
    </group>
</menu>