<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="250dp"
    android:gravity="center"
    android:background="@drawable/bg"
    android:orientation="vertical"

    >

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_update"
        android:contentDescription="@string/image_de_mise_a_jour" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/veuillez_mettre_a_jour_l_application"/>

    <Button
        android:id="@+id/validate_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:foreground="@android:color/transparent"
        android:background="@android:color/transparent"
        android:text="@string/ok"/>

</LinearLayout>