<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="30dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/black"
        android:textColorHint="@color/black"
        android:hint="@string/ancien_mot_de_passe"
        app:passwordToggleEnabled="true"
        android:layout_marginBottom="30dp"
        android:transitionName="password_tran"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/black"
        android:textColorHint="@color/black"
        android:hint="@string/nouveau_mot_de_passe"
        app:passwordToggleEnabled="true"
        android:layout_marginBottom="30dp"
        android:transitionName="password_tran"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/black"
        android:textColorHint="@color/black"
        android:hint="@string/confirmez_votre_mot_de_passe"
        app:passwordToggleEnabled="true"
        android:layout_marginBottom="30dp"
        android:transitionName="password_tran"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:textColor="@color/black"
            android:foreground="@android:color/transparent"
            android:background="@android:color/transparent"
            android:layout_weight="1"
            android:text="@string/mettre_jour"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/annuler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:textColor="@color/black"
            android:foreground="@android:color/transparent"
            android:background="@android:color/transparent"
            android:layout_weight="1"
            android:text="@string/annuler"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

</LinearLayout>