<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:padding="30dp"
    android:layout_height="wrap_content">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:gravity="center"
       android:orientation="vertical">

       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/date_debut"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/date_de_debut_de_semaine"
           app:hintTextColor="@color/black"
           android:textColorHint="@color/black"
           android:layout_marginBottom="30dp"
           style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

           <com.google.android.material.textfield.TextInputEditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:focusable="false"
               android:textColor="@color/black"
               android:inputType="date"/>

       </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/date_fin"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/date_de_fin_de_semaine"
           app:hintTextColor="@color/black"
           android:textColorHint="@color/black"
           android:layout_marginBottom="30dp"
           style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

           <com.google.android.material.textfield.TextInputEditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:focusable="false"
               android:textColor="@color/black"
               android:inputType="date"/>

       </com.google.android.material.textfield.TextInputLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center"
           android:orientation="horizontal">

           <Button
               android:id="@+id/ajouter_plage"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:layout_marginEnd="20dp"
               android:foreground="@android:color/transparent"
               android:background="@android:color/transparent"
               android:text="@string/ajouter"
               android:textColor="@color/black"
               style="?android:attr/buttonBarButtonStyle" />

           <Button
               android:id="@+id/annuler_plage"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:layout_marginStart="20dp"
               android:foreground="@android:color/transparent"
               android:background="@android:color/transparent"
               android:text="@string/annuler"
               android:textColor="@color/black"
               style="?android:attr/buttonBarButtonStyle" />


       </LinearLayout>

   </LinearLayout>

</ScrollView>